# soft-engine

./: .gitignore  LICENSE  README.md  soft-engine.cabal
app/: Main.hs
src/: Display.hs  Engine.hs  Render.hs
src/Data/: Types.hs
src/Math/: LinAlg.hs
src/Render/: Camera.hs  Engine.hs  Mesh.hs
