name:                soft-engine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Software Engine written in Haskell
homepage:            https://github.com/Lucsanszky/soft-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Lucsanszky
maintainer:          dl3913@ic.ac.uk
copyright:           Daniel Lucsanszky
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Types
                     , Engine
                     , Math.LinAlg
                     , Render
                     , Render.Camera
                     , Render.Engine
                     , Render.Mesh

  build-depends:       base >= 4.7 && < 5
                     , linear
                     , sdl2
                     , vector 
                     , ghc-prim
                     , mtl
                     , monad-loops
                     , word8
                     , lens

  default-language:    Haskell2010

executable soft-engine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , mtl
                     , linear
                     , soft-engine

  default-language:    Haskell2010

test-suite soft-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , soft-engine

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lucsanszky/soft-engine
